Code improvements (ty FlashyReese)
Signed-off-by: pajicadvance <pavle.pajic23@gmail.com>